--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,27 @@
   font-weight: bold;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.button{
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #DE7800;
+  margin: 2em;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#DE7800;
+  text-align:center;
+  transition: all 0.2s;
+}
+
+.button:hover{
+  color:#000000;
+  background-color:#DE7800;
+}
